--- a/.github/workflows/freefire-likes.yml
+++ b/.github/workflows/freefire-likes.yml
@@ -23,12 +23,21 @@ permissions:
 jobs:
   give-likes:
     runs-on: ubuntu-latest
-    env:
-      FREEFIRE_LIKES_UID: "2805365702"
-      FREEFIRE_LIKES_KEY: "astute2k3"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Load workflow defaults
+        run: |
+          python - <<'PY' >> "$GITHUB_ENV"
+          from scripts.config import default_env_vars
+          defaults = default_env_vars()
+          print(f"FREEFIRE_UID={defaults['FREEFIRE_UID']}")
+          print(f"FREEFIRE_UIDS={defaults.get('FREEFIRE_UIDS', '')}")
+          print(f"FREEFIRE_LIKES_UID={defaults['FREEFIRE_LIKES_UID']}")
+          print(f"FREEFIRE_LIKES_UIDS={defaults.get('FREEFIRE_LIKES_UIDS', '')}")
+          print(f"FREEFIRE_LIKES_KEY={defaults['FREEFIRE_LIKES_KEY']}")
+          PY
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -48,7 +57,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -- "likes_activity.csv"
+          git add -- "players"
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
