--- a/.github/workflows/cleanup-likes-log.yml
+++ b/.github/workflows/cleanup-likes-log.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -- "likes_activity.csv"
+          git add -- "players"
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
@@ -36,4 +36,3 @@ jobs:
             git pull --rebase origin "$GITHUB_REF_NAME"
             git push
           fi
-
