--- a/.github/workflows/cleanup-likes-log.yml
+++ b/.github/workflows/cleanup-likes-log.yml
@@ -33,6 +33,7 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "Automated likes log cleanup"
-            git pull --rebase origin "$GITHUB_REF_NAME"
-            git push
+            BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
+            git push origin HEAD:"$BRANCH"
           fi
+
