--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   push:
     branches:
-      - test        # change to main once you’re ready
+      - main       # change to main once you’re ready
   workflow_dispatch:
 
 permissions:
